test/export/pod_must_have_test.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pod-must-have-test
spec:
  match:
    scope: "Namespaced"
    namespaces: [ "nginx" ]
    kinds:
    - apiGroups: [ "" ]
      kinds: [ "Pod" ]
  parameters:
    labels: [ "test" ]
